<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.11</version>
		<relativePath/>
	</parent>

	<groupId>com.equity</groupId>
	<artifactId>fundamentals-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fundamentals-service</name>
	<description>Scheduler that fetches quarterly results and balance sheets for all NSE companies</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>

		<!-- JPA — for entity/repository layer -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<!-- Exclude Logback — Log4j2 is used instead -->
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Web — needed for RestTemplate to call the yfinance Python wrapper -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Log4j2 — replaces default Logback; SLF4J API stays the same -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

		<!-- PostgreSQL JDBC driver -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Jackson JSR310 — serialize LocalDate / LocalDateTime as ISO strings -->
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!--
				    classifier=exec: produces TWO jars:
				    1. fundamentals-service-0.0.1-SNAPSHOT.jar        — plain jar, usable as a
				       library dependency by unified-scheduler (classes at root, not under BOOT-INF)
				    2. fundamentals-service-0.0.1-SNAPSHOT-exec.jar   — fat runnable jar for
				       standalone execution
				    Without classifier, only the fat jar is produced and the unified-scheduler
				    cannot import the classes.
				-->
				<configuration>
					<classifier>exec</classifier>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
